--- a/02-weather-api/src/popup/popup.css
+++ b/02-weather-api/src/popup/popup.css
@@ -1,5 +1,6 @@
 body {
-  width: 400px;
-  height: 400px;
-  border: 3px solid yellow;
+  width: 320px;
+  height: 512px;
+  background-color: #f5f5f5;
+  font-family: 'Roboto';
 }
